--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         Your browser does not support HTML5 video.
     </video>
     <script>
-
+        // day la code bi loi
     </script>
 </body>
 </html>
