Revert "force push"
This reverts commit efbb9c2d3f2f2f28257b40a2a195fb21bf306448.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         Your browser does not support HTML5 video. abc
     </video>
     <script>
-        // day la code bi loi do thang hieuaaaaaaa
+        // day la code bi loi do thang hieu
     </script>
 </body>
 </html>
